--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
       </div>
 
-      <div class="absolute bottom-0 w-screen">
+      <div class="absolute bottom-0 w-[70%]">
         <p>
           Improve your front-end skills by building projects Scan the QR code to
           visit Frontend Mentor and take your coding skills to the next level
